# ArVM

./: CMakeLists.txt  README.md  arvm.c  arvm.h  bdd.c  bdd.h  stack.h
include/: arvm.h
src/: CMakeLists.txt  analyze.c  analyze.h  arena.c  arena.h  arvm.c  arvm.h  asm.c  asm.h  bdd.c  bdd.h  builder.c  builder.h  codegen.c  codegen.h  eval.c  eval.h  imath.c  imath.h  iter.h  iterators.c  iterators.h  match.c  match.h  math.c  math.h  opt.c  opt.h  platform.h  transform.c  transform.h  visit.c  visit.h  xbuf.h
src/codegen/: asm.c  codegen.c  codegen.h  platform.h  xalloc.c  xalloc.h  xbuf.c
src/codegen/arch/: amd64.h  arch.h  i386.h  x86.c  x86.h
src/ir/: analyze.c  analyze.h  builder.c  builder.h  ir.h  match.c  match.h  ops.h  opt.c  opt.h  print.c  print.h  transform.h  visit.c  visit.h
src/util/: arena.c  buffer.h  cons.c  cons.h  hashtable.c  hashtable.h  macros.h  meta.h  pool.c  pool.h
test/: CMakeLists.txt  analyze.c  arvm.c  asm.c  benchmark.c  builder.c  eval.c  match.c  opt.c  print.c  transform.c
